# home-assistant-personal-video-addon

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  repository.yaml
.github/: dependabot.yml
.github/workflows/: addon-validation.yml  backend.yml  docs.yml  e2e-visual.yml  frontend.yml  publish-container.yml  release.yml  security.yml
personal_video_studio/: CHANGELOG.md  DOCS.md  Dockerfile  __init__.py  apparmor.txt  build.yaml  config.yaml  requirements.txt  run.sh
personal_video_studio/app/: __init__.py  server.py
personal_video_studio/app/static/: app.js  index.html  styles.css
tests/: create_e2e_fixture.py  frontend.test.mjs  run_e2e_server.py  test_app.py
tests/e2e/: studio.spec.ts
